[tool.poetry]
name = "eshc-intranet"
version = "0.1.0"
description = ""
authors = ["eshc"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.5"
boto3 = "^1.23.4"
Markdown = "^3.3.7"
autopep8 = "^1.6.0"
"backports.csv" = "^1.0.7"
dj-database-url = "^0.5.0"
dj-static = "^0.0.6"
django-appconf = "^1.0.5"
django-crispy-forms = "^1.14.0"
django-debug-toolbar = "^3.4.0"
django-htmlmin = "^0.11.0"
django-import-export = "^2.8.0"
django-ordered-model = "^3.5"
django-sendfile = "^0.3.11"
djangorestframework = "^3.13.1"
fake-factory = "^9999.9.9"
gunicorn = "^20.1.0"
hovercraft = "^2.7"
idna_ssl = "^1.1.0"
jdcal = "^1.4.1"
ldap3 = "^2.9.1"
Markups = "^3.1.3"
micawber = "^0.5.4"
oauthlib = "^3.2.0"
olefile = "^0.46"
pathtools = "^0.1.2"
pdfrw = "^0.4"
pipdeptree = "^2.2.1"
pyquery = "^1.4.3"
python-http-client = "^3.3.7"
python-quickbooks = "^0.9.1"
reportlab = "^3.6.9"
sh = "^1.14.2"
toml = "^0.10.2"
unicodecsv = "^0.14.1"
Unidecode = "^1.3.4"
whitenoise = "^6.1.0"
Whoosh = "^2.7.4"
wiki = "^0.10"
Genshi = "^0.7.7"
appdirs = "^1.4.4"
authclient = "^1.0"
chardet = "^4.0.0"
django-allauth = "^0.50.0"
"path.py" = "^12.5.0"
django-storages = "^1.12.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
